# Orion

./: .gitignore  CMakeLists.txt
Core/: CMakeLists.txt
Core/Private/: BuildInfo.cc.in  Version.cc
Core/Private/Posix/: Platform.cc
Core/Private/Stl/: String.cc
Core/Private/Win32/: Platform.cc
Core/Public/Orion/: BuildInfo.hh  Platform.hh  Version.hh
Core/Public/Orion/Stl/: String.hh
Core/Test/: Version.cc
Engine/: CMakeLists.txt
Engine/Private/: Main.cc
